--- a/src/pages/home/components/right-nav.scss
+++ b/src/pages/home/components/right-nav.scss
@@ -4,28 +4,27 @@
   left: -100%;
   color: #b2b2b2;
   font-family: "Lato";
+  z-index: 100;
   ul {
     padding: 0;
     margin: 0;
     list-style: none;
     li {
-      height: 50px;
+      margin-bottom: 40px;
       font-size: 18px;
       position: relative;
+      cursor: pointer;
       &.active {
         color: black;
         mix-blend-mode: difference;
-        &::before {
-          content: "";
-          height: 1px;
-          width: 40px;
-          position: absolute;
-          top: 10px;
-          left: -50px;
-          background: black;
-          mix-blend-mode: difference;
-        }
       }
     }
+  }
+  .active-bar {
+    width: 0;
+    height: 1px;
+    background: black;
+    position: fixed;
+    left: 0;
   }
 }
