--- a/src/pages/home/components/right-nav.scss
+++ b/src/pages/home/components/right-nav.scss
@@ -15,6 +15,7 @@
       font-size: 18px;
       position: relative;
       cursor: pointer;
+      transition: all 0.5s;
       &.active {
         color: black;
       }
