--- a/src/pages/home/components/articles.scss
+++ b/src/pages/home/components/articles.scss
@@ -6,7 +6,7 @@
   color: white;
   position: relative;
   overflow-x: hidden;
-  height: 100vh;
+  overflow-y: hidden;
   width: 100%;
   .title {
     font-size: 50px;
