added scroll instruction

--- a/src/pages/home/components/intro.scss
+++ b/src/pages/home/components/intro.scss
@@ -34,4 +34,51 @@
       font-weight: bold;
     }
   }
+  @keyframes scrollDownButton {
+    0% {
+      top: 30%;
+      opacity: 1;
+    }
+    25% {
+      top: 50%;
+      opacity: 1;
+    }
+    50% {
+      top: 50%;
+      opacity: 0;
+    }
+    100% {
+      top: 30%;
+      opacity: 0;
+    }
+  }
+  .scroll-down-btn {
+    width: 30px;
+    height: 50px;
+    position: absolute;
+    bottom: 30px;
+    left: calc((100% - 30px) / 2);
+    border: 3px solid #afafaf;
+    border-radius: 23px;
+    &::before {
+      position: absolute;
+      top: 30%;
+      left: calc((100% - 10px) / 2);
+      background: #afafaf;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      animation-name: scrollDownButton;
+      animation-duration: 2.5s;
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
+      content: '';
+    }
+  }
+  .scroll-text {
+    text-align: center;
+    font-family: 'Lato';
+    position: fixed;
+    bottom: 30px;
+  }
 }
